--- a/Q-and-A/Q-and-A/Base.lproj/Main.storyboard
+++ b/Q-and-A/Q-and-A/Base.lproj/Main.storyboard
@@ -6,10 +6,11 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Q&A-->
         <scene sceneID="8Bo-T6-anW">
             <objects>
                 <tableViewController id="RM9-mW-Do3" sceneMemberID="viewController">
@@ -18,13 +19,70 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="5Ag-bB-hht">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="QuestionCell" rowHeight="120" id="5Ag-bB-hht" customClass="QuestionTableViewCell" customModule="Q_and_A" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5Ag-bB-hht" id="NdN-wC-lvQ">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="119.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="qea-bx-Ojg">
+                                            <rect key="frame" x="8" y="8" width="398" height="103.5"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="USV-tL-L2q">
+                                                    <rect key="frame" x="0.0" y="0.0" width="143" height="24"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6i7-wI-WxR">
+                                                            <rect key="frame" x="0.0" y="0.0" width="87" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRw-Jt-4P7">
+                                                            <rect key="frame" x="95" y="0.0" width="48" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Pg7-bG-zVN">
+                                                    <rect key="frame" x="0.0" y="38" width="142.5" height="24"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Asked By:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vO8-22-7Ft">
+                                                            <rect key="frame" x="0.0" y="0.0" width="89.5" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dNB-Xe-TRj">
+                                                            <rect key="frame" x="94.5" y="0.0" width="48" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9E-Tu-1eB">
+                                                    <rect key="frame" x="0.0" y="76" width="49.5" height="27.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="qea-bx-Ojg" secondAttribute="bottom" constant="8" id="C0G-4z-zpF"/>
+                                        <constraint firstItem="qea-bx-Ojg" firstAttribute="top" secondItem="NdN-wC-lvQ" secondAttribute="top" constant="8" id="GDb-DS-UJJ"/>
+                                        <constraint firstItem="qea-bx-Ojg" firstAttribute="leading" secondItem="NdN-wC-lvQ" secondAttribute="leading" constant="8" id="cvE-uI-eqP"/>
+                                        <constraint firstAttribute="trailing" secondItem="qea-bx-Ojg" secondAttribute="trailing" constant="8" id="onQ-Zu-agH"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="askedByLabel" destination="dNB-Xe-TRj" id="29o-4H-wJg"/>
+                                    <outlet property="questionTextLabel" destination="RRw-Jt-4P7" id="a06-cO-969"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -32,19 +90,66 @@
                             <outlet property="delegate" destination="RM9-mW-Do3" id="kKi-Ga-V1P"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="gqJ-UX-FD1"/>
+                    <navigationItem key="navigationItem" title="Q&amp;A" id="gqJ-UX-FD1">
+                        <barButtonItem key="rightBarButtonItem" title="Ask Question" id="dWk-hV-f0t">
+                            <connections>
+                                <segue destination="9rN-3b-nbN" kind="show" identifier="AskQuestionSegue" id="gfk-yy-lko"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dpW-MT-KaO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1044.9275362318842" y="136.60714285714286"/>
+        </scene>
+        <!--Question-->
+        <scene sceneID="ECU-TI-gdt">
+            <objects>
+                <viewController id="9rN-3b-nbN" customClass="AskQuestionViewController" customModule="Q_and_A" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0Fe-yq-VAg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fsP-TK-0fu">
+                                <rect key="frame" x="0.0" y="156" width="414" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="QMS-F0-qse">
+                                <rect key="frame" x="0.0" y="194" width="414" height="168"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="fsP-TK-0fu" firstAttribute="top" secondItem="TBO-hl-Lce" secondAttribute="top" constant="16" id="8MF-vq-MNp"/>
+                            <constraint firstItem="fsP-TK-0fu" firstAttribute="leading" secondItem="TBO-hl-Lce" secondAttribute="leading" id="8hs-WC-lmz"/>
+                            <constraint firstItem="QMS-F0-qse" firstAttribute="leading" secondItem="TBO-hl-Lce" secondAttribute="leading" id="Bb8-Fy-zHO"/>
+                            <constraint firstItem="TBO-hl-Lce" firstAttribute="bottom" secondItem="QMS-F0-qse" secondAttribute="bottom" constant="500" id="Mu8-G3-25M"/>
+                            <constraint firstItem="TBO-hl-Lce" firstAttribute="trailing" secondItem="QMS-F0-qse" secondAttribute="trailing" id="Oj8-cd-Kk2"/>
+                            <constraint firstItem="TBO-hl-Lce" firstAttribute="trailing" secondItem="fsP-TK-0fu" secondAttribute="trailing" id="V9h-Fg-VvX"/>
+                            <constraint firstItem="QMS-F0-qse" firstAttribute="top" secondItem="fsP-TK-0fu" secondAttribute="bottom" constant="8" id="oF2-3I-qJB"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="TBO-hl-Lce"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Question" id="zFJ-5e-kDU">
+                        <barButtonItem key="rightBarButtonItem" title="Submit Question" id="u8c-jn-hMv"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ihx-q9-bsx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2010.144927536232" y="-245.75892857142856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="beE-pt-bHL">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GfD-7r-qHq" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="CdL-59-KNF">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="CdL-59-KNF">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -54,7 +159,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WDJ-GH-srL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="134.78260869565219" y="136.60714285714286"/>
+            <point key="canvasLocation" x="206" y="137"/>
         </scene>
     </scenes>
 </document>
