--- a/QandA/QandA/Resources/Base.lproj/Main.storyboard
+++ b/QandA/QandA/Resources/Base.lproj/Main.storyboard
@@ -13,13 +13,13 @@
         <!--Q&A-->
         <scene sceneID="jA8-RA-r3H">
             <objects>
-                <tableViewController id="XZ7-O2-EN5" sceneMemberID="viewController">
+                <tableViewController id="XZ7-O2-EN5" customClass="QuestionTableViewController" customModule="QandA" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Rse-wx-Jsd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="QuestionCell" rowHeight="120" id="eqn-uA-reA">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="QuestionCell" rowHeight="120" id="eqn-uA-reA" customClass="QuestionTableViewCell" customModule="QandA" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eqn-uA-reA" id="6fc-KY-wYY">
@@ -47,7 +47,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="AsO-Z6-ZZY">
-                                                    <rect key="frame" x="0.0" y="30.5" width="148" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="30.5" width="134.5" height="20.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Asked By:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZhW-GV-PJx">
                                                             <rect key="frame" x="0.0" y="0.0" width="82" height="20.5"/>
@@ -55,8 +55,8 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Answer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kl4-v0-hqf">
-                                                            <rect key="frame" x="91" y="0.0" width="57" height="20.5"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Asker" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kl4-v0-hqf">
+                                                            <rect key="frame" x="91" y="0.0" width="43.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -80,7 +80,10 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="efJ-f1-DDP" kind="show" trigger="accessoryAction" id="wHM-jO-r17"/>
+                                    <outlet property="answerLabel" destination="kl4-v0-hqf" id="Ok4-7l-FPT"/>
+                                    <outlet property="answerStatusLabel" destination="DY1-At-LFZ" id="zG1-e8-0oL"/>
+                                    <outlet property="questionAskedLabel" destination="InM-o3-ryW" id="K8J-H4-azP"/>
+                                    <segue destination="efJ-f1-DDP" kind="show" identifier="answerQuestion" trigger="accessoryAction" id="wHM-jO-r17"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -92,52 +95,58 @@
                     <navigationItem key="navigationItem" title="Q&amp;A" id="Xa4-bS-fjj">
                         <barButtonItem key="rightBarButtonItem" title="Ask Question" style="plain" id="aCW-cR-L4j">
                             <connections>
-                                <segue destination="Two-IN-DCh" kind="show" id="Vt4-ew-4Du"/>
+                                <segue destination="Two-IN-DCh" kind="show" identifier="askQuestion" id="Vt4-ew-4Du"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="questionCell" destination="eqn-uA-reA" id="kSO-ss-6O3"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZaH-Oe-0LV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="875.36231884057975" y="86.383928571428569"/>
         </scene>
-        <!--View Controller-->
+        <!--Ask Question View Controller-->
         <scene sceneID="ugV-xh-aSJ">
             <objects>
-                <viewController id="Two-IN-DCh" sceneMemberID="viewController">
+                <viewController id="Two-IN-DCh" customClass="AskQuestionViewController" customModule="QandA" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hIJ-yh-20b">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="gqb-wq-kVY">
-                                <rect key="frame" x="15" y="160" width="384" height="78"/>
-                                <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tbs-DU-xw3">
-                                        <rect key="frame" x="0.0" y="0.0" width="384" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TBh-vj-zE8">
-                                        <rect key="frame" x="0.0" y="48" width="384" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                </subviews>
-                            </stackView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tbs-DU-xw3">
+                                <rect key="frame" x="0.0" y="156" width="414" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="T4E-cz-iVp">
+                                <rect key="frame" x="0.0" y="194" width="414" height="218"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="gqb-wq-kVY" firstAttribute="top" secondItem="Qok-jQ-caM" secondAttribute="top" constant="20" id="dd9-6Q-3gc"/>
-                            <constraint firstItem="gqb-wq-kVY" firstAttribute="leading" secondItem="Qok-jQ-caM" secondAttribute="leading" constant="15" id="imG-Xg-AR3"/>
-                            <constraint firstItem="Qok-jQ-caM" firstAttribute="trailing" secondItem="gqb-wq-kVY" secondAttribute="trailing" constant="15" id="mzs-i7-EYE"/>
+                            <constraint firstItem="T4E-cz-iVp" firstAttribute="leading" secondItem="Qok-jQ-caM" secondAttribute="leading" id="0Fx-wz-vvU"/>
+                            <constraint firstItem="T4E-cz-iVp" firstAttribute="top" secondItem="Tbs-DU-xw3" secondAttribute="bottom" constant="8" id="2Vp-v7-Gy1"/>
+                            <constraint firstItem="Tbs-DU-xw3" firstAttribute="leading" secondItem="Qok-jQ-caM" secondAttribute="leading" id="Cj9-D3-o0I"/>
+                            <constraint firstItem="Qok-jQ-caM" firstAttribute="trailing" secondItem="Tbs-DU-xw3" secondAttribute="trailing" id="H1e-Zs-0M4"/>
+                            <constraint firstItem="Tbs-DU-xw3" firstAttribute="top" secondItem="Qok-jQ-caM" secondAttribute="top" constant="16" id="NkW-4f-hzK"/>
+                            <constraint firstItem="Qok-jQ-caM" firstAttribute="bottom" secondItem="T4E-cz-iVp" secondAttribute="bottom" constant="450" id="XgL-u8-ogE"/>
+                            <constraint firstItem="Qok-jQ-caM" firstAttribute="trailing" secondItem="T4E-cz-iVp" secondAttribute="trailing" id="qYe-Xo-n7R"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Qok-jQ-caM"/>
                     </view>
                     <navigationItem key="navigationItem" id="wPf-Ic-f3G">
                         <barButtonItem key="rightBarButtonItem" title="Submit Question" style="plain" id="1xm-LQ-0KM"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="nameField" destination="Tbs-DU-xw3" id="KA0-f4-r3c"/>
+                        <outlet property="questionTextView" destination="T4E-cz-iVp" id="gpe-4a-OCd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xEX-Fy-fG2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -204,6 +213,7 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="fCD-vY-bOY">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Zhe-ym-bbq"/>
                         <barButtonItem key="rightBarButtonItem" title="Submit Answer" style="plain" id="M0U-A7-dT8"/>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
