--- a/Q-and-A/Q-and-A/Base.lproj/Main.storyboard
+++ b/Q-and-A/Q-and-A/Base.lproj/Main.storyboard
@@ -80,6 +80,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="answeredByLabel" destination="U9E-Tu-1eB" id="TeD-KI-1aJ"/>
                                     <outlet property="askedByLabel" destination="dNB-Xe-TRj" id="29o-4H-wJg"/>
                                     <outlet property="questionTextLabel" destination="RRw-Jt-4P7" id="a06-cO-969"/>
                                     <segue destination="vfk-VY-F31" kind="show" identifier="ShowAnswerSegue" id="I4i-Hz-qt8"/>
@@ -134,7 +135,7 @@
                                     </textField>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ewz-iC-oeG">
                                         <rect key="frame" x="0.0" y="102" width="378" height="245"/>
-                                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
